--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,12 @@ DerivedData
 *.hmap
 *.xccheckout
 
+### Xcode Patch ###
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcworkspace/contents.xcworkspacedata
+/*.gcno
+
 #CocoaPods
 Pods
